--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -93,19 +93,19 @@
                         </label>
                         <select id="posted_date" name="filters.posted_date"
                             class="block px-2 py-1 ml-2 text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                            <option value="Any Date">Any Date</option>
-                            <option value="Today">Today</option>
-                            <option value="Last 3 Days" selected>Last 3 Days</option>
-                            <option value="Last 7 Days">Last 7 Days</option>
+                            <option value="NO_PREFERENCE">Any Date</option>
+                            <option value="ONE">Today</option>
+                            <option value="THREE" selected>Last 3 Days</option>
+                            <option value="SEVEN">Last 7 Days</option>
                         </select>
                     </div>
-                    <div class="flex items-center">
+                    <!-- <div class="flex items-center">
                         <input type="checkbox" id="third_party" name="filters.third_party"
                             class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
                         <label for="third_party" class="ml-2 block text-sm text-gray-900">
                             Third Party Jobs
                         </label>
-                    </div>
+                    </div> -->
                     <div class="flex items-center">
                         <input type="checkbox" id="replace_resume" name="filters.replace_resume"
                             class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
@@ -225,7 +225,7 @@
                     max_applications: parseInt(document.getElementById('max_applications').value),
                     filters: {
                         posted_date: document.getElementById('posted_date').value,
-                        third_party: document.getElementById('third_party').checked,
+                        third_party: false,
                         replace_resume: document.getElementById('replace_resume').checked
                     },
                     resume_path: resumePath
